my first travis android

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,3 +24,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
 }
+
+task helloWorldCompile {
+    println "Hello world compile"
+}
+
+task helloWorldRuntime << {
+    println "Hello world run time"
+}
