--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
@@ -23,6 +24,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.squareup.sqlbrite:sqlbrite:0.8.0'
+    // Object Mapper
+    compile 'com.hannesdorfmann.sqlbrite:annotations:0.6.0'
+    apt 'com.hannesdorfmann.sqlbrite:object-mapper:0.6.0'
 }
 
 task helloWorldCompile {
@@ -31,4 +36,11 @@ task helloWorldCompile {
 
 task helloWorldRuntime << {
     println "Hello world run time"
+}
+
+task generateStrings {
+    def sw = "Hello World"
+
+    def stringsFile = new File("C:\\Users\\linke_000\\Desktop\\log.txt")
+    stringsFile.write(sw.toString())
 }
